fix missing query bug and start whois endpoint
