# server/api/controllers/whois/router.js
@@ -1,0 +1,7 @@
+import * as express from 'express';
+import controller from './controller';
+
+
+export default express
+  .Router()
+  .get('', controller.whois);
